Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.854 devel

****  Fix multiple VPI variable callbacks, bug679. [Rich Porter]

****  Fix vpi_get of vpiSize, bug680. [Rich Porter]


* Verilator 3.853 2013-09-30

****  Add --no-order-clock-delay to work around bug613. [Charlie Brej]


* Verilator 3.852 2013-09-29

***   Support named function and task arguments. [Chris Randall]

***   Report SELRANGE warning for non-generate if, bug675. [Roland Kruse]

****  Fix ordering of $fgetc, msg1229. [Frederic Requin]

****  Fix --output-split-cfunc to count internal functions. [Chris Randall]

****  Fix crash on 32-bit Ubuntu, bug670. [Mark Jackson Pulver]


* Verilator 3.851 2013-08-15

***   Fix ordering of clock enables with delayed assigns, bug613. [Jeremy Bennett]

***   Fix vpi_iterate on memory words, bug655. [Rich Porter]

****  Fix final duplicate declarations when non-inlined, bug661. [Charlie Brej]

****  Fix interface ports with comma lists, msg1058. [Ed Lander]

****  Fix parameter real conversion from integer.

****  Fix clang warnings, bug668.  [Yutetsu Takatsukasa]


* Verilator 3.850 2013-06-02

**    Support interfaces and modports, bug102.  [Byron Bradley, Jeremy Bennett]

***   Duplicate clock gate optimization on by default, bug621.

****  Fix arrayed input compile error, bug645. [Krzysztof Jankowski]

****  Fix GCC version runtime changes, bug651. [Jeremy Bennett]

****  Fix packed array select internal error, bug652. [Krzysztof Jankowski]


* Verilator 3.847 2013-05-11

***   Add ALWCOMBORDER warning.  [KC Buckenmaier]
      
***   Add --pins-sc-uint and --pins-sc-biguint, bug638. [Alex Hornung]
      
****  Support "signal[vec]++".
      
****  Fix simulation error when inputs and MULTIDRIVEN, bug634. [Ted Campbell]
      
****  Fix module resolution with __, bug631. [Jason McMullan]
      